Add multiple reicpes and images
add pages for recipes crispy-tofu.html and sticky-glazed-chicken.html
add images for both as well as image for pork

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ol>
         <li><a href="recipes/pork-and-sauerkraut.html">Pork and Sauerkraut</a></li>
+        <li><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
+        <li><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
     </ol>
 </body>
 </html>
