--- a/recipes/pork-and-sauerkraut.html
+++ b/recipes/pork-and-sauerkraut.html
@@ -8,6 +8,12 @@
 
 <body>
     <h1>Pork and Sauerkraut</h1>
-    <a href="../index.html">Home</a>
+    <img src="../img/pork.jpg" />
+    <p><a href="../index.html">Home</a></p>
+<h4>A new year staple! This "set it and forget it" slow cooker recipe will be an instant crowd pleaser!</h4>
+<p></p>
+    <ul>
+        <li></li>
+    </ul>
 </body>
 </html>
