--- a/recipes/crispy-tofu.html
+++ b/recipes/crispy-tofu.html
@@ -9,5 +9,24 @@
     <h1>Crispy Tofu</h1>
     <img src="../img/tofu.jpg" />
     <p><a href="../index.html">Home</a></p>
+    <h4>Crispy tofu made without baking for an hour!</h4>
+    <p>Quick and easy crispy tofu can serve as the base of so many dishes or be eaten all on its own! No more waiting around for ages to get crispy tofu!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>16 oz extra firm tofu</li>
+        <li>Pich of salt</li>
+        <li>1 tsp desired seasoning i.e. curry powder, chili powder, tamari, tadoori spice, etc.</li>
+        <li>1 tbs oil of your choice</li>
+    </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Preheat oven to 375 degrees F (190 C) and wrap your extra firm tofu in an absorbent towel. Set something heavy on top,like a cast iron skillet, to press out extra moisture for 5 minutes.</li>
+        <li>Unwrap tofu and cut into small cubes, then add to a medium mixing bowl and season with a pinch of salt and desired seasoning, which will vary depending on your dish. I was adding mine to a curry, so I added curry powder. If adding to a BBQ dish, try a BBQ seasoning blend. Or if adding to a Thai dish, try a Thai curry powder. If you want it to remain neutral in flavor and just crisp up, simply season with salt and skip the extra seasoning.</li>
+        <li>Heat a large oven-safe metal or cast iron skillet over medium heat. Once hot, add the oil and the seasoned tofu. Sauté for 5 minutes, shaking/flipping occasionally to cook on all sides, until tofu has a slight crust on each side and has begun to brown.</li>
+        <li>Transfer skillet to oven to bake for about 15 minutes, or until the tofu is firm to the touch and has begun to dry out and crisp up. The longer it bakes, the firmer it gets. I found the 15-minute mark to be about right.</li>
+        <li>Now you have crispy tofu to add to virtually any dish you'd like!</li>
+    </ol>
+    <img src="../img/chef.gif" />
 </body>
 </html>
