--- a/recipes/pork-and-sauerkraut.html
+++ b/recipes/pork-and-sauerkraut.html
@@ -10,10 +10,26 @@
     <h1>Pork and Sauerkraut</h1>
     <img src="../img/pork.jpg" />
     <p><a href="../index.html">Home</a></p>
-<h4>A new year staple! This "set it and forget it" slow cooker recipe will be an instant crowd pleaser!</h4>
-<p></p>
+<h4>A sweet and savory mix of slow roasted pork loin, tangy sauerkraut, and sweet apple butter.</h4>
+<p>A new year staple! This "set it and forget it" slow cooker recipe will be an instant crowd pleaser! Throw all your ingredients in in the morning and have a delicious and cozy meal at dinner time.</p>
+<h3>Ingredients</h3>
     <ul>
-        <li></li>
+        <li>1 pork loin roast</li>
+        <li>1 onion chopped</li>
+        <li>1 cup or so of apple butter</li>
+        <li>1 jar or bag of sauerkraut with juice</li>
+        <li>1 pint of apple juice</li>
+        <li>1 tbs of brown sugar</li>
+        <li>salt and pepper to taste</li>
     </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Dab pork loin dry and sear in a hot pan to develop a crust.</li>
+        <li>Place pork loin in slow cooker and top with all other ingredients.</li>
+        <li>Cook on low for at least 8 hours to allow pork to break down. Once it falls apart like butter it is ready to eat.</li>
+        <li>Enjoy!</li>
+    </ol>
+    <img src="../img/chef.gif" />
 </body>
 </html>
