Add content to chicken recipe
add complete recipe to sticky-glazed-chicken.html
adjust sizes of images for both chicken and tofu recipe pages

--- a/recipes/sticky-glazed-chicken.html
+++ b/recipes/sticky-glazed-chicken.html
@@ -7,7 +7,31 @@
 </head>
 <body>
     <h1>Sticky Glazed Chicken</h1>
-    <img src="../img/chicken.jpg" />
+    <img src="../img/chicken.jpg" width="250" />
     <p><a href="../index.html">Home</a></p>
+    <h4>Sweet pan fried chicken thighs with sticky suace.</h4>
+    <p>This sweet and savory chicken is delicious and easy to make! Be sure to get a good sear and fully coat these delightful chicken thighs. And garnish with fresh spring onions! Serve with white rice and veggies for a balanced meal.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound skin on chicken thighs</li>
+        <li>1 tbs olive oil</li>
+        <li>3/4 cup brown sugar</li>
+        <li>1/3 cup soy sauce</li>
+        <li>2 tbs hoisin sauce</li>
+        <li>1 tbs sweet chili sauce</li>
+        <li>1 tbs ginger peeled and grated</li>
+        <li>Pinch of dried red pepper</li>
+        <li>1/2 tsp minced garlic</li>
+        <li>Juice of 1 lime</li>
+    </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Heat a large skillet over medium high heat and add 1 Tbs of olive oil. Add the chicken and salt and pepper. Cook chicken about 3 minutes on each side or until thermometer reads 165 degrees and brown on each side. Set chicken aside on plate.</li>
+        <li>n the skillet whisk together brown sugar, soy sauce, hoisin sauce, sweet chili sauce, ginger, red pepper flakes, garlic and lime juice. Bring to a boil over medium heat for 1-2 minutes until sauce thickens.</li>
+        <li>Add chicken back to the sauce and coat each side with the sauce. Garnish with sesame seeds and chopped green onions.</li>
+
+        <img src="../img/chef.gif" />
+    </ol>
 </body>
 </html>
