--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
         <li><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
     </ol>
+    <img src="./img/kitchen.jpg" />
 </body>
 </html>
