--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>odin-recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ol>
-        <li><a href="recipes/pork-and-sauerkraut.html">Pork and Sauerkraut</a></li>
-        <li><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
-        <li><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
+        <li id="menu"><a href="recipes/pork-and-sauerkraut.html">Pork and Sauerkraut</a></li>
+        <li id="menu"><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
+        <li id="menu"><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
     </ol>
     <img src="./img/kitchen.jpg" />
 </body>
