--- a/recipes/sticky-glazed-chicken.html
+++ b/recipes/sticky-glazed-chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sticky-glazed-chicken</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Sticky Glazed Chicken</h1>
