CSS mess around
Just go nuts, man

--- a/recipes/pork-and-sauerkraut.html
+++ b/recipes/pork-and-sauerkraut.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Pork and Sauerkraut</h1>
     <img src="../img/pork.jpg" />
-    <p><a href="../index.html">Home</a></p>
+    <button><a href="../index.html">Home</a></button>
 <h4>A sweet and savory mix of slow roasted pork loin, tangy sauerkraut, and sweet apple butter.</h4>
 <p>A new year staple! This "set it and forget it" slow cooker recipe will be an instant crowd pleaser! Throw all your ingredients in in the morning and have a delicious and cozy meal at dinner time.</p>
 <h3>Ingredients</h3>
