--- a/recipes/sticky-glazed-chicken.html
+++ b/recipes/sticky-glazed-chicken.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Sticky Glazed Chicken</h1>
-    <img src="../img/chicken.jpg" width="250" />
-    <p><a href="../index.html">Home</a></p>
+    <img src="../img/chicken.jpg" width="175" />
+    <button><a href="../index.html">Home</a></button>
     <h4>Sweet pan fried chicken thighs with sticky suace.</h4>
     <p>This sweet and savory chicken is delicious and easy to make! Be sure to get a good sear and fully coat these delightful chicken thighs. And garnish with fresh spring onions! Serve with white rice and veggies for a balanced meal.</p>
     <h3>Ingredients</h3>
@@ -29,7 +29,7 @@
     <h3>Directions</h3>
     <ol>
         <li>Heat a large skillet over medium high heat and add 1 Tbs of olive oil. Add the chicken and salt and pepper. Cook chicken about 3 minutes on each side or until thermometer reads 165 degrees and brown on each side. Set chicken aside on plate.</li>
-        <li>n the skillet whisk together brown sugar, soy sauce, hoisin sauce, sweet chili sauce, ginger, red pepper flakes, garlic and lime juice. Bring to a boil over medium heat for 1-2 minutes until sauce thickens.</li>
+        <li>In the skillet whisk together brown sugar, soy sauce, hoisin sauce, sweet chili sauce, ginger, red pepper flakes, garlic and lime juice. Bring to a boil over medium heat for 1-2 minutes until sauce thickens.</li>
         <li>Add chicken back to the sauce and coat each side with the sauce. Garnish with sesame seeds and chopped green onions.</li>
 
         <img src="../img/chef.gif" />
