--- a/recipes/crispy-tofu.html
+++ b/recipes/crispy-tofu.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Crispy Tofu</h1>
-    <img src="../img/tofu.jpg" width="250"/>
-    <p><a href="../index.html">Home</a></p>
+    <img src="../img/tofu.jpg" width="175"/>
+    <button><a href="../index.html">Home</a></button>
     <h4>Crispy tofu made without baking for an hour!</h4>
     <p>Quick and easy crispy tofu can serve as the base of so many dishes or be eaten all on its own! No more waiting around for ages to get crispy tofu!</p>
     <h3>Ingredients</h3>
