--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Odin Recipes</h1>
     <img src="./img/kitchen.jpg" />
     <ol>
-        <li id="menu"><a href="recipes/pork-and-sauerkraut.html">Pork and Sauerkraut</a></li>
-        <li id="menu"><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
-        <li id="menu"><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
+        <li class="menu"><a href="recipes/pork-and-sauerkraut.html">Pork and Sauerkraut</a></li>
+        <li class="menu"><a href="recipes/sticky-glazed-chicken.html">Sticky Glazed Chicken</a></li>
+        <li class="menu"><a href="recipes/crispy-tofu.html">Crispy Tofu</a></li>
     </ol>
 </body>
 </html>
